- Added Image Resource For Situation When There Is No Cover To Display - Changed Method Signature For Method For Displaying Cover Images - Use boolean Instead Of BufferedImage - Added Logic For Displaying Alerts If Invalid Search Data Is Used In MovieListController - Added CSS Formatting For Displaying List Of Movies In MovieListController - Edited CSS Stylesheet Used In MovieListController FXML File - Fixed Bugs With Table Invalid Way Of Showing Vertical Scrollbar - Changed ScrollView Parent Of TableView To StackPane, Resized Columns To Hide Horizontal Scrollbar - Fixed Warnings In Modified Classes - Minor Bug Fixes And Refactors

--- a/src/main/resources/com/souryuu/catalogit/gui/show-all-movies-view.css
+++ b/src/main/resources/com/souryuu/catalogit/gui/show-all-movies-view.css
@@ -4,3 +4,30 @@ TextField{
     -fx-border-radius: 2;
     -fx-border-width: 1;
 }
+.table-view {
+    -fx-alignment: CENTER;
+    -fx-text-alignment: CENTER;
+    -fx-border-color: GRAY;
+    -fx-border-width: 2px;
+}
+
+.table-row-cell {
+    -fx-border-color: GRAY;
+    -fx-border-radius: 2px;
+}
+
+.table-row-cell:odd{
+    -fx-background-color: GhostWhite;
+}
+
+.table-row-cell:selected {
+    -fx-background-color: LightSkyBlue;
+}
+
+.table-cell {
+    -fx-border-color: LIGHTGRAY;
+    -fx-border-radius: 2px;
+}
+
+.button:hover {
+}
